FIX(#27): ALIGN TEXT + FONTS
Due to merge some parts of the template had to be reajusted.

--- a/static/styles/master.css
+++ b/static/styles/master.css
@@ -46,6 +46,7 @@ input {
 
 .title {
   font-size: 2.5em;
+  font-family: "ABCWhite", sans-serif;
   font-weight: bold;
   text-decoration: underline black solid 0.2em;
   color: #000;
